[gd_scene load_steps=95 format=2]

[ext_resource path="res://Key.png" type="Texture2D" id=1]
[ext_resource path="res://game development tileset/buttonspritesheet.png" type="Texture2D" id=2]
[ext_resource path="res://game development tileset/Lever Frame 1.png" type="Texture2D" id=3]
[ext_resource path="res://game development tileset/dominicdoor.png" type="Texture2D" id=4]
[ext_resource path="res://game development tileset/Lever Frame 2.png" type="Texture2D" id=5]
[ext_resource path="res://game development tileset/dominicdoorkeyblade.png" type="Texture2D" id=6]
[ext_resource path="res://game development tileset/Lever Frame 3.png" type="Texture2D" id=7]
[ext_resource path="res://game development tileset/Teleporter.png" type="Texture2D" id=8]
[ext_resource path="res://button.gd" type="Script" id=9]
[ext_resource path="res://keydoor.gd" type="Script" id=10]
[ext_resource path="res://lever.gd" type="Script" id=11]
[ext_resource path="res://teleporter.gd" type="Script" id=12]
[ext_resource path="res://game development tileset/dominicdoorkeybladeanimspritesheet.png" type="Texture2D" id=13]
[ext_resource path="res://game development tileset/dominicdooranimspritesheet.png" type="Texture2D" id=14]
[ext_resource path="res://Flame Torch.png" type="Texture2D" id=15]
[ext_resource path="res://Flame 2.0.png" type="Texture2D" id=16]
[ext_resource path="res://icon.png" type="Texture2D" id=17]

[sub_resource type="RectangleShape2D" id=66]
size = Vector2( 14.5, 31.75 )

[sub_resource type="CircleShape2D" id=67]
radius = 14.5602

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=68]
animations = [ {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "key",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "rgb",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=69]
radius = 183.154

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 13 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 13 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=76]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=77]
size = Vector2( 15.5, 21.25 )

[sub_resource type="RectangleShape2D" id=78]
size = Vector2( 15.25, 32 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 14 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 14 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 14 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 14 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 14 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 14 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=79]
animations = [ {
"frames": [ SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ) ],
"loop": false,
"name": "closing",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=71]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=72]
size = Vector2( 26, 13.75 )

[sub_resource type="RectangleShape2D" id=73]
size = Vector2( 15.5, 32 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=75]
radius = 16.5
height = 30.0

[sub_resource type="RectangleShape2D" id=80]
size = Vector2( 14, 33.5 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 8 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 8 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 8 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 8 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 8 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 8 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 8 )
region = Rect2( 128, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 8 )
region = Rect2( 256, 768, 128, 128 )

[sub_resource type="SpriteFrames" id=81]
animations = [ {
"frames": [ SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 55 ), SubResource( 55 ), SubResource( 55 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 16 )
region = Rect2( 64, 0, 32, 67 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 16 )
region = Rect2( 96, 0, 32, 67 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 16 )
region = Rect2( 128, 0, 32, 67 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 16 )
region = Rect2( 160, 0, 32, 67 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 16 )
region = Rect2( 192, 0, 32, 67 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 16 )
region = Rect2( 224, 0, 32, 67 )

[sub_resource type="SpriteFrames" id=169]
animations = [ {
"frames": [ SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="keydoor" type="StaticBody2D" parent="."]
position = Vector2( 1007, 1215 )
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="dominic" type="CollisionShape2D" parent="keydoor"]
position = Vector2( 0, -0.25 )
shape = SubResource( 66 )

[node name="key" type="Area2D" parent="keydoor"]
position = Vector2( 0, -60 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="keydoor/key"]
shape = SubResource( 67 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="keydoor/key"]
position = Vector2( -2, 1 )
frames = SubResource( 68 )
animation = "rgb"
frame = 4
speed_scale = 2.0
playing = true

[node name="area2d" type="Area2D" parent="keydoor/key"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="keydoor/key/area2d"]
shape = SubResource( 69 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="keydoor"]
frames = SubResource( 70 )
speed_scale = 2.0
playing = true

[node name="lever" type="Area2D" parent="."]
position = Vector2( 360, 1072 )
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 11 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="lever"]
frames = SubResource( 76 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever"]
position = Vector2( -1, 11.25 )
shape = SubResource( 77 )

[node name="StaticBody2D" type="StaticBody2D" parent="lever"]
position = Vector2( -1, 69 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever/StaticBody2D"]
position = Vector2( -0.25, 0 )
shape = SubResource( 78 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="lever/StaticBody2D"]
frames = SubResource( 79 )
animation = "closing"
frame = 8
speed_scale = 2.0
playing = true

[node name="StaticBody2D2" type="StaticBody2D" parent="lever"]
position = Vector2( -74.5, 65.5 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever/StaticBody2D2"]
position = Vector2( -0.25, 0 )
shape = SubResource( 78 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="lever/StaticBody2D2"]
frames = SubResource( 79 )
animation = "opening"
frame = 8
speed_scale = 2.0
playing = true

[node name="button" type="Area2D" parent="."]
position = Vector2( 99, 644 )
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="button"]
position = Vector2( -7.5, 1.5 )
frames = SubResource( 71 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="button"]
position = Vector2( -7.5, 19.75 )
shape = SubResource( 72 )

[node name="StaticBody2D" type="StaticBody2D" parent="button"]
position = Vector2( -6.5, 75.5 )
collision_layer = 3
collision_mask = 3
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="button/StaticBody2D"]
shape = SubResource( 73 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="button/StaticBody2D"]
frames = SubResource( 74 )

[node name="StaticBody2D2" type="StaticBody2D" parent="button"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="button/StaticBody2D2"]
position = Vector2( -8, 38.5 )
rotation = 1.5708
shape = SubResource( 75 )

[node name="teleporter" type="Area2D" parent="."]
position = Vector2( -330, 1226 )
scale = Vector2( 2, 2 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="teleporter"]
position = Vector2( 0, -14.5 )
shape = SubResource( 80 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="teleporter"]
frames = SubResource( 81 )
frame = 20
speed_scale = 3.0
playing = true

[node name="torch" type="Node2D" parent="."]
position = Vector2( -138, 1616 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="torch"]
frames = SubResource( 169 )
frame = 2
speed_scale = 3.0
playing = true

[node name="FlameTorch" type="Sprite2D" parent="torch"]
position = Vector2( -2, 46 )
texture = ExtResource( 15 )

[node name="PointLight2D" type="PointLight2D" parent="torch"]
position = Vector2( 0, -1 )
scale = Vector2( 10, 10 )
texture = ExtResource( 17 )
color = Color( 1, 0, 0, 1 )

[connection signal="body_entered" from="keydoor/key" to="keydoor" method="_on_key_body_entered"]
[connection signal="body_entered" from="keydoor/key/area2d" to="keydoor" method="_on_area2d_body_entered"]
[connection signal="body_exited" from="keydoor/key/area2d" to="keydoor" method="_on_area2d_body_exited"]
[connection signal="body_entered" from="lever" to="lever" method="_on_lever_body_entered"]
[connection signal="body_entered" from="button" to="button" method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="button" to="button" method="_on_Area2D2_body_exited"]
